# MOSbiusV2Tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  test_installation.py
commandline/: README.md  delete_setup.py
commandline/_DO_NOT_USE/: switch_matrix_register_map.json
commandline/chip_config_data/: device_name_to_sizing_registers.json  pin_name_to_number.json  pin_number_to_name.json  switch_matrix_register_map.json
commandline/chip_config_data_20250505/: pin_number_to_name.json
commandline/circuit_json_examples/: DCC_diode_connected_CC_ON_NODE.json  INV_string_12_NODE.json  INV_string_3_RBUS.json  (+5 more)
examples/: INV_string_12_growing_sizes.json  INV_string_5_RBUS.json  sw_cap_OTA_N_DINV1_L_NODE_RBUS_SBUS.json  template_device_sizes.json
notebooks/: co_pilot_prompts.txt  connections_to_NODE_subckt.ipynb  connections_to_PROBE_sw_matrix_subckt.ipynb  generated_pins_to_BUS.cir  generated_pins_to_RBUS_SBUS_2.cir  generated_register_settings.json  generated_register_spice_netlist.cir  generated_set_SWMATRIX_PROBE_2.cir  sandbox_generate_connections.ipynb  sandbox_stuff.ipynb  sizes_to_PROBE_sizes_subckt.ipynb
notebooks_old/: PK_pins_to_RBUS_SWBUS_template.cir  PK_set_SWMATRIX_template.cir  connections_to_RBUS_subckt.ipynb  connections_to_subckt.ipynb  generated_NODE_circuit.cir  generated_pins_to_RBUS_SBUS.cir  generated_pins_to_RBUS_SWBUS.cir  generated_set_SWMATRIX_PROBE.cir  generated_set_SWMATRIX_PROBE_3.cir  generated_set_sizes_PROBE.cir  pin_name_to_number.json  pin_name_to_sw_matrix_pin_number.json  switch_matrix_register_map.json
(+55 files in other folders)
