[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosbiusv2tools"
version = "1.0.0"
description = "Tools for generating SPICE subcircuits from JSON circuit descriptions and sizing files."
readme = "README.md"
# readme-content-type = "text/markdown"
# license = { text = "MIT" }
# authors = [
#     { name = "Peter Kinget", email = "peter@kinget.net" }
# ]
# # homepage = "https://github.com/peterkinget/MOSbiusCADFlow"
# ]
requires-python = ">=3.6"
dependencies = [
    "setuptools"
]

[project.urls]
"Homepage" = "https://github.com/peterkinget/MOSbiusCADFlow"

[project.scripts]
generate_sizes_probe_subckt = "commandline.generate_sizes_probe_subckt:main"
generate_switch_matrix_probe_subckt = "commandline.generate_switch_matrix_probe_subckt:main"
generate_pins_to_RBUS_SBUS_subckt = "commandline.generate_pins_to_RBUS_SBUS_subckt:main"
generate_nodes_subckt = "commandline.generate_nodes_subckt:main"
test_mosbiusv2tools_installation = "commandline.test_installation:main"
generate_scan_chain_input = "commandline.generate_scan_chain_input:main"

[tool.setuptools]
package-dir = {"" = "commandline/src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["commandline/src"]
include = ["commandline", "commandline.*"]

[tool.setuptools.package-data]
"commandline" = [
    "chip_config_data/*.json",
    "subckt_templates/*.cir",
]

[tool.setuptools.data-files]
"mosbiusv2tools_examples" = ["examples/*.json"]